--- a/nnsrm.html
+++ b/nnsrm.html
@@ -94,10 +94,8 @@ alt="">
 <br>
 <br>
 <b>References:</b>
-
 <br>
 <br>
-
 [1] 
 Shared representation across neural networks.
 <br>
@@ -105,13 +103,24 @@ Lu, Q., Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U.
 <br>
 Workshop on Integration of Deep Learning Theories, NIPS 2018. 
 <br>
-<!-- paper -->
+<a href="">paper</a>
 
 
 <br>
+<br>
 [2] 
+SRM is implemented in <a href="http://brainiak.org/">BrainIAK</a>
+<br>
+Chen, P.-H., Chen, J., Yeshurun, Y., Hasson, U., Haxby, J., & Ramadge, P. J. (2015). A Reduced-Dimension fMRI Shared Response Model. In Advances in Neural Information Processing Systems 28 (pp. 460–468). 
+
+
+<br>
+<br>
+[3] 
 A huge thanks to <a href="https://github.com/ContextLab/hypertools">hypertools</a>, 
 the package I used to make these animations. 
+<br>
+Heusser, A. C., Ziman, K., Owen, L. L. W., & Manning, J. R. (2018). HyperTools: a Python Toolbox for Gaining Geometric Insights into High-Dimensional Data. Journal of Machine Learning Research: JMLR, 18(152), 1–6. 
 
 </section>
 
