--- a/nnsrm.html
+++ b/nnsrm.html
@@ -121,7 +121,7 @@ The animations below shows the neural dynamics of 5 conv nets (the last hidden l
 
 
 <br>
-Here're the animations for 5 ResNet18 (layer 15) before vs. after alignment. A more quantitaively analysis revealed that orthogonal transformations explained less variance for ResNet alignment, compared to ConvNets, suggesting high capacity models can learn representations that are more qualitatively different. 
+Here're the animations for 5 ResNet18 (layer 15) before (Fig 2A) vs. after alignment (Fig 2B). A more quantitaively analysis revealed that orthogonal transformations explained less variance for ResNet alignment, compared to ConvNets, suggesting high capacity models can learn representations that are more qualitatively different. 
 <br>
 
 <div class="row">
