--- a/nnsrm-NeurIPS18.html
+++ b/nnsrm-NeurIPS18.html
@@ -157,11 +157,11 @@ Here're the animations for 5 ResNet18 (layer 15) before (Fig 2A) vs. after align
 <br>
 <br>
 [1] 
-Shared representation across neural networks.
+Shared representational geometry across neural networks.
 <br>
 Lu, Q., Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U. 
 <br>
-Workshop on Integration of Deep Learning Theories, NIPS 2018. 
+Workshop on Integration of Deep Learning Theories, NeurIPS 2018. 
 <br>
 <a href="">paper</a>
 
