--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@ I'm a 2nd year grad student with
 and
 <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
 at Princeton. 
-<!-- I'm working neural network models of episodic memory for naturalistic processing.  -->
 
 Here's my <a href="docs/CV_QL.pdf">CV</a>.
 
@@ -85,8 +84,8 @@ Ongoing stuff:
     <a href="https://github.com/NEU480/organization/wiki">class webpage</a>.
     </li>
     <li>
-    I'm organizing the weekly PDP meeting.
-    Let me know if you'd like to ...
+    I'm organizing the weekly PDP meeting, a weekly meeting on neural/cognitive computational models. 
+    Feel free to contact me know if you (including external speakers) would like to ...
     <ul>
     <li>join the mailing list</li>
     <li>present your work</li>
@@ -94,14 +93,6 @@ Ongoing stuff:
 </ul>
 
 </section>
-
-<!-- the END of right column  -->
-
-<!-- <footer>
-    <p><small>Hosted on GitHub Pages<br>
-    Theme by <a href="https://github.com/orderedlist">orderedlist</a>
-    </small></p>
-</footer> -->
 
 </div>
 <script src="javascripts/scale.fix.js"></script>
