--- a/nnsrm-NeurIPS18.html
+++ b/nnsrm-NeurIPS18.html
@@ -156,15 +156,15 @@ Here're the animations for 5 ResNet18 (layer 15) before (Fig 2A) vs. after align
 <b>References:</b>
 <br>
 <br>
-[1] 
+[1]
 Shared representational geometry across neural networks.
 <br>
 Lu, Q., Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U. 
 <br>
 Workshop on Integration of Deep Learning Theories, NeurIPS 2018. 
 <br>
-<a href="">paper</a>
-
+<a href="https://arxiv.org/abs/1811.11684">paper</a>, 
+<a href="https://qihongl.github.io/nnsrm-nips18.html">demo</a>
 
 <br>
 <br>
