--- a/resources.html
+++ b/resources.html
@@ -153,6 +153,8 @@ Fundations:
     </li>
     <li><a href="http://probmods.org/">Probabilistic Models of Cognition</a>, Noah D. Goodman & Joshua B. Tenenbaum
     </li>
+    <li><a href="http://statsthinking21.org">Intro stats</a>, [<a href="https://github.com/poldrack/psych10-book">git repo</a>], Russell A. Poldrack
+    </li>
 </ul>
 
 
