--- a/research.html
+++ b/research.html
@@ -71,7 +71,7 @@ Workshop on Integration of Deep Learning Theories, NeurIPS 2018.
 <br>
 <a href="https://arxiv.org/abs/1811.11684">paper</a>, 
 <!-- <a href="https://github.com/qihongl/qihongl.github.io/blob/master/docs/NIPS18_poster_NNSRM.pdf">poster</a>,  -->
-<a href="https://qihongl.github.io/nnsrm-nips18.html">demo</a>
+<a href="https://qihongl.github.io/nnsrm-NeurIPS18.html">demo</a>
 </p>
 
 <p>
