--- a/nnsrm-NeurIPS18.html
+++ b/nnsrm-NeurIPS18.html
@@ -164,7 +164,7 @@ Lu, Q., Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U.
 Workshop on Integration of Deep Learning Theories, NeurIPS 2018. 
 <br>
 <a href="https://arxiv.org/abs/1811.11684">paper</a>, 
-<a href="https://qihongl.github.io/nnsrm-nips18.html">demo</a>
+<a href="https://qihongl.github.io/nnsrm-NeurIPS18.html">demo</a>
 
 <br>
 <br>
