update/fix typo

--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@ Ongoing stuff:
     <a href="https://github.com/NEU480/organization/wiki">class webpage</a>.
     </li>
     <li>
-    I'm organizing the weekly PDP meeting, a weekly meeting on neural/cognitive computational models. 
-    Feel free to contact me know if you (including external speakers) would like to ...
+    I'm organizing the weekly PDP (parallel distributed processing) meeting, a weekly meeting on neural/cognitive computational models. 
+    Feel free to contact me if you (including external speakers) would like to ...
     <ul>
     <li>join the mailing list</li>
     <li>present your work</li>
-    <li>etc.</li>
+    <li>propose some external speaker(s)</li>
+    <li>anything PDP related!</li>
 </ul>
 
 </section>
