--- a/research.html
+++ b/research.html
@@ -128,6 +128,9 @@ Poster presented at the Annual Meeting of the Cognitive Science Society, CogSci 
 <a href="https://qihongl.github.io/docs/cogsci2018_poster.pdf">poster</a>
 </p>
 
+<br>
+<h3><p> <strong>Undergrad works / before 2017</strong></p></h3>
+
 <p>
 <b>An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition.</b>
 <br>
@@ -165,7 +168,7 @@ Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengine
 
 
 <br>
-<h3><p> <strong>Other manuscripts</strong></p></h3>
+<h3><p> <strong>Manuscripts</strong></p></h3>
 
 <p>
 <b>A Parallel-Distributed Processing Approach to Mathematical Cognition.</b>
