--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ I'm a 2nd year grad student with
 and
 <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
 at Princeton. 
-
+I'm working on computational models of episodic memory. 
 Here's my <a href="docs/CV_QL.pdf">CV</a>.
 
 </p>
