--- a/index.html
+++ b/index.html
@@ -77,15 +77,9 @@ Here's my <a href="docs/CV_QL.pdf">CV</a>.
 
 </p>
 
-Ongoing stuff:
-<ul>
-    <li>
-    I'm TAing NEU 480. Here's the
-    <a href="https://github.com/NEU480/organization/wiki">class webpage</a>.
-    </li>
-    <li>
-    I'm organizing the weekly PDP (parallel distributed processing) meeting, a weekly meeting on neural/cognitive computational models. 
-    Feel free to contact me if you (including external speakers) would like to ...
+<b>The PDP meeting</b><br>
+I'm organizing the PDP (parallel distributed processing) meeting, a weekly meeting on neural/cognitive computational models. 
+Feel free to contact me if you (including external speakers) would like to ...
     <ul>
     <li>join the mailing list</li>
     <li>present your work</li>
