--- a/research.html
+++ b/research.html
@@ -69,8 +69,8 @@ Lu, Q., Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U.
 <br>
 Workshop on Integration of Deep Learning Theories, NeurIPS 2018. 
 <br>
+<a href="https://qihongl.github.io/docs/NIPS18_poster_NNSRM.pdf">poster</a>,
 <a href="https://arxiv.org/abs/1811.11684">paper</a>, 
-<!-- <a href="https://github.com/qihongl/qihongl.github.io/blob/master/docs/NIPS18_poster_NNSRM.pdf">poster</a>,  -->
 <a href="https://qihongl.github.io/nnsrm-NeurIPS18.html">demo</a>
 </p>
 
@@ -168,7 +168,7 @@ Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengine
 
 
 <br>
-<h3><p> <strong>Manuscripts</strong></p></h3>
+<h3><p><strong>Other Manuscripts</strong></p></h3>
 
 <p>
 <b>A Parallel-Distributed Processing Approach to Mathematical Cognition.</b>
