add some demos for teaching

--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
 
         <p class="view"> <h4><a href="index.html">Home</a></h4></p>
         <p class="view"> <h4><a href="research.html">Research</a></h4></p>
+        <p class="view"><h4><a href="teaching.html">Teaching</a></h4></p>            
         <p class="view"> <h4><a href="resources.html">Resources</a></h4></p>
         <p class="view"> <h4>Contact<h4></p>
         <br><br>
