--- a/research.html
+++ b/research.html
@@ -34,6 +34,7 @@
 
     <p class="view"><h4><a href="index.html">Home</a></h4></p>
     <p class="view"><h4>Research</h4></p>
+    <p class="view"><h4><a href="teaching.html">Teaching</a></h4></p>            
     <p class="view"><a href="resources.html"><h4>Resources</h4></a></p>
     <p class="view"><a href="contact.html"><h4>Contact</h4></a></p>
     <br><br>
@@ -60,12 +61,14 @@
 </h3>
 
 
-<h3><p><strong>Preprints</strong></p></h3>
+<!-- <h3><p><strong>Preprints</strong></p></h3> -->
 
 <p>
 <b>Learning to apply schematic knowledge to novel instances</b>
 <br>
 Chen, C., Lu, Q., Beukers, A., Baldassano, C.,  Norman, K. A.
+<br>
+arXiv
 <br>
 <a href="https://arxiv.org/abs/1902.09006">paper</a>
 </p>
@@ -82,9 +85,8 @@ Workshop on Integration of Deep Learning Theories, NeurIPS 2018.
 <a href="https://qihongl.github.io/nnsrm-NeurIPS18.html">demo</a>
 </p>
 
-<br>
-<h3><p><strong>Conference presentations</strong></p></h3>
-
+<!-- <br>
+<h3><p><strong>Conference presentations</strong></p></h3> -->
 
 <p>
 <b>Modeling hippocampal-cortical dynamics during event processing</b>
