--- a/resources.html
+++ b/resources.html
@@ -34,6 +34,7 @@
 
     <p class="view"><h4><a href="index.html">Home</a></h4></p>
     <p class="view"><h4><a href="research.html">Research</a></h4></p>
+    <p class="view"><h4><a href="teaching.html">Teaching</a></h4></p>            
     <p class="view"><h4>Resources</h4></p>
     <p class="view"><h4><a href="contact.html">Contact</a></h4></p>
     <br><br>
