minor text edit

--- a/teaching.html
+++ b/teaching.html
@@ -85,11 +85,11 @@ My demos:
 
 
 <br>
-Other useful stuff: 
+Other demos: 
 <br>
 - <a href="https://playground.tensorflow.org/">Neural network playground</a>
 <br>
-- <a href="https://github.com/iRath96/som-demo">a demo of self-organizing map</a>
+- <a href="https://github.com/iRath96/som-demo">a demo of the self-organizing map</a>
 <br>
 - <a href="https://neuronaldynamics-exercises.readthedocs.io/en/latest/exercises/hopfield-network.html">a demo of the hopfield network</a>
 <br>
