--- a/teaching.html
+++ b/teaching.html
@@ -82,6 +82,14 @@ My demos:
 &emsp;
 <a href="https://github.com/qihongl/demo-elman-1990">repo</a>
 <br>
+- leaky competing accumulator, a toy example
+<br>
+&emsp;
+<a href="https://github.com/qihongl/demo-lca">repo</a>
+<br>
+
+
+
 
 
 <br>
