--- a/research.html
+++ b/research.html
@@ -96,7 +96,7 @@ Lu, Q., Hasson, U., & Norman, K. A.
 The Conference on Cognitive Computational Neuroscience, CCN 2018.
 <br>
 <a href="https://qihongl.github.io/docs/CCN18_poster_HCModel.pdf">poster</a>,
-<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1048">paper</a>
+<a href="https://ccneuro.org/2018/Papers/ViewPapers.asp?PaperNum=1048">paper</a>
 </p>
 
 <p>
@@ -107,7 +107,7 @@ Chen, C., Lu, Q., Beukers, A., Baldassano, C., & Norman, K. A.
 The Conference on Cognitive Computational Neuroscience, CCN 2018.
 <br>
 <a href="https://qihongl.github.io/docs/CCN18_poster_binding.pdf">poster</a>,
-<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1036">paper</a>
+<a href="https://ccneuro.org/2018/Papers/ViewPapers.asp?PaperNum=1036">paper</a>
 </p>
 
 <p>
@@ -118,7 +118,7 @@ Yu, J., Lu, Q., Hasson, U., Norman, K. A., & Pillow, J. W.
 The Conference on Cognitive Computational Neuroscience, CCN 2018.
 <br>
 <a href="https://qihongl.github.io/docs/CNN18_poster_perfopt.pdf">poster</a>,
-<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1148">paper</a>
+<a href="https://ccneuro.org/2018/Papers/ViewPapers.asp?PaperNum=1148">paper</a>
 </p>
 
 <p>
