--- a/index.html
+++ b/index.html
@@ -34,20 +34,25 @@
 
     <p class="view"><h4>Home</h4></p>
     <p class="view"><a href="research.html"><h4>Research</h4></a></p>
-    <p class="view"><h4><a href="teaching.html">Teaching</a></h4></p>            
+    <p class="view"><h4><a href="teaching.html">Teaching</a></h4></p>
     <p class="view"><a href="resources.html"><h4>Resources</h4></a></p>
     <p class="view"><a href="contact.html"><h4>Contact</h4></a></p>
     <br><br>
 
     <p class="view">
-    <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
-    <a href="mailto:qlu@princeton.edu" target="_top"><img src="imgs/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
+    <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">
+    <img src="imgs/logo/google-scholar.png" alt="google scholar" width=40px></a>
+    <a href="https://twitter.com/Qihong_Lu">
+    <img src="imgs/logo/twitter_r.png" alt="twitter" width=40px></a>
     </p>
 
     <p class="view">
-    <a href="https://www.facebook.com/qihong.lu.9"> <img src="imgs/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
-    <a href="https://twitter.com/Qihong_Lu"> <img src="imgs/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
+    <a href="https://github.com/QihongL">
+    <img src="imgs/logo/github.svg" alt="github" width=40px></a>
+    <a href="mailto:qlu@princeton.edu" target="_top">
+    <img src="imgs/logo/email.png" alt="email" width=40px></a>
     </p>
+
 </header>
 
 <!-- the END of left column  -->
@@ -72,14 +77,14 @@ I'm a 2nd year grad student with
 <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a>
 and
 <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
-at Princeton. 
-I'm working on computational models of episodic memory. 
+at Princeton.
+I'm working on computational models of episodic memory.
 Here's my <a href="docs/CV_QL.pdf">CV</a>.
 
 </p>
 
 <b>The PDP meeting</b><br>
-I'm organizing the PDP (parallel distributed processing) meeting, a weekly meeting on neural/cognitive computational models. 
+I'm organizing the PDP (parallel distributed processing) meeting, a weekly meeting on neural/cognitive computational models.
 Feel free to contact me if you (including external speakers) would like to ...
     <ul>
     <li>join the mailing list</li>
