--- a/research.html
+++ b/research.html
@@ -39,15 +39,19 @@
     <p class="view"><a href="contact.html"><h4>Contact</h4></a></p>
     <br><br>
 
-        <p class="view">
-        <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
-        <a href="mailto:qlu@princeton.edu" target="_top"><img src="imgs/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
-        </p>
+    <p class="view">
+    <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">
+    <img src="imgs/logo/google-scholar.png" alt="google scholar" width=40px></a>
+    <a href="https://twitter.com/Qihong_Lu">
+    <img src="imgs/logo/twitter_r.png" alt="twitter" width=40px></a>
+    </p>
 
-        <p class="view">
-        <a href="https://www.facebook.com/qihong.lu.9"> <img src="imgs/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
-        <a href="https://twitter.com/Qihong_Lu"> <img src="imgs/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
-        </p>
+    <p class="view">
+    <a href="https://github.com/QihongL">
+    <img src="imgs/logo/github.svg" alt="github" width=40px></a>
+    <a href="mailto:qlu@princeton.edu" target="_top">
+    <img src="imgs/logo/email.png" alt="email" width=40px></a>
+    </p>
 </header>
 
 <!-- the END of left column  -->
@@ -70,7 +74,8 @@ Chen, C., Lu, Q., Beukers, A., Baldassano, C., Norman, K. A.
 <br>
 arXiv
 <br>
-<a href="https://arxiv.org/abs/1902.09006">paper</a>
+<a href="https://arxiv.org/abs/1902.09006">paper</a>, 
+<a href="https://github.com/cchen23/generalized_schema_learning">code</a>
 </p>
 
 <p>
@@ -82,6 +87,7 @@ Workshop on Integration of Deep Learning Theories, NeurIPS 2018.
 <br>
 <a href="https://qihongl.github.io/docs/NIPS18_poster_NNSRM.pdf">poster</a>,
 <a href="https://arxiv.org/abs/1811.11684">paper</a>,
+<a href="https://github.com/qihongl/nnsrm-neurips18">code</a>,
 <a href="https://qihongl.github.io/nnsrm-NeurIPS18.html">demo</a>
 </p>
 
