--- a/resources.html
+++ b/resources.html
@@ -34,19 +34,23 @@
 
     <p class="view"><h4><a href="index.html">Home</a></h4></p>
     <p class="view"><h4><a href="research.html">Research</a></h4></p>
-    <p class="view"><h4><a href="teaching.html">Teaching</a></h4></p>            
+    <p class="view"><h4><a href="teaching.html">Teaching</a></h4></p>
     <p class="view"><h4>Resources</h4></p>
     <p class="view"><h4><a href="contact.html">Contact</a></h4></p>
     <br><br>
 
     <p class="view">
-    <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
-    <a href="mailto:qlu@princeton.edu" target="_top"><img src="imgs/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
+    <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">
+    <img src="imgs/logo/google-scholar.png" alt="google scholar" width=40px></a>
+    <a href="https://twitter.com/Qihong_Lu">
+    <img src="imgs/logo/twitter_r.png" alt="twitter" width=40px></a>
     </p>
 
     <p class="view">
-    <a href="https://www.facebook.com/qihong.lu.9"> <img src="imgs/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
-    <a href="https://twitter.com/Qihong_Lu"> <img src="imgs/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
+    <a href="https://github.com/QihongL">
+    <img src="imgs/logo/github.svg" alt="github" width=40px></a>
+    <a href="mailto:qlu@princeton.edu" target="_top">
+    <img src="imgs/logo/email.png" alt="email" width=40px></a>
     </p>
 </header>
 
