--- a/teaching.html
+++ b/teaching.html
@@ -34,19 +34,23 @@
 
     <p class="view"><h4><a href="index.html">Home</a></h4></p>
     <p class="view"><h4><a href="research.html">Research</a></h4></p>
-    <p class="view"><h4>Teaching</h4></p>    
+    <p class="view"><h4>Teaching</h4></p>
     <p class="view"><a href="resources.html"><h4>Resources</h4></a></p>
     <p class="view"><h4><a href="contact.html">Contact</a></h4></p>
     <br><br>
 
     <p class="view">
-    <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
-    <a href="mailto:qlu@princeton.edu" target="_top"><img src="imgs/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
+    <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">
+    <img src="imgs/logo/google-scholar.png" alt="google scholar" width=40px></a>
+    <a href="https://twitter.com/Qihong_Lu">
+    <img src="imgs/logo/twitter_r.png" alt="twitter" width=40px></a>
     </p>
 
     <p class="view">
-    <a href="https://www.facebook.com/qihong.lu.9"> <img src="imgs/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
-    <a href="https://twitter.com/Qihong_Lu"> <img src="imgs/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
+    <a href="https://github.com/QihongL">
+    <img src="imgs/logo/github.svg" alt="github" width=40px></a>
+    <a href="mailto:qlu@princeton.edu" target="_top">
+    <img src="imgs/logo/email.png" alt="email" width=40px></a>
     </p>
 </header>
 
@@ -65,7 +69,7 @@
 <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=005628&term=1194">offcial course description</a>
 <br>
 <br>
-My demos: 
+My demos:
 <br>
 - the "necker cube network", a model of bistable perception
 <br>
@@ -74,7 +78,7 @@ My demos:
 - n-th order conditioning with temporal difference learning
 <br>
 &emsp;
-<a href="https://github.com/qihongl/demo-td">repo</a>, 
+<a href="https://github.com/qihongl/demo-td">repo</a>,
 <a href="https://docs.google.com/presentation/d/1FZzoebdkT6g103CbYOA87Hz_CUIdjs37wVu7TB2E4RA/edit?usp=sharing">some slides</a>
 <br>
 - a qualitative replication of Elman (1990) with a fully recurrent network
@@ -93,7 +97,7 @@ My demos:
 
 
 <br>
-Other demos: 
+Other demos:
 <br>
 - <a href="https://playground.tensorflow.org/">Neural network playground</a>
 <br>
