--- a/research.html
+++ b/research.html
@@ -88,7 +88,7 @@ Workshop on Integration of Deep Learning Theories, NeurIPS 2018.
 <a href="https://qihongl.github.io/docs/NIPS18_poster_NNSRM.pdf">poster</a>,
 <a href="https://arxiv.org/abs/1811.11684">paper</a>,
 <a href="https://github.com/qihongl/nnsrm-neurips18">code</a>,
-<a href="https://colab.research.google.com/github/qihongl/demo-nnalign/blob/master/demo-nnalign.ipynb">tutorial</a>, 
+<a href="https://colab.research.google.com/github/qihongl/demo-nnalign/blob/master/demo-nnalign.ipynb">tutorial on google colab</a>, 
 <a href="https://qihongl.github.io/nnsrm-NeurIPS18.html">some animations</a>
 
 </p>
