--- a/nnsrm-NeurIPS18.html
+++ b/nnsrm-NeurIPS18.html
@@ -92,8 +92,20 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 </h3>
 
+<p>
+<h3><strong>Demo: rigid-body transformations can align hidden representational spaces across neural networks</strong></h3>
+&emsp;
+<a href="https://qihongl.github.io/docs/NIPS18_poster_NNSRM.pdf">poster</a>,
+<a href="https://arxiv.org/abs/1811.11684">paper</a>,
+<a href="https://github.com/qihongl/nnsrm-neurips18">code</a>,
+<a href="https://colab.research.google.com/github/qihongl/demo-nnalign/blob/master/demo-nnalign.ipynb">tutorial on google colab</a>, 
+<a href="https://qihongl.github.io/nnsrm-NeurIPS18.html">some animations</a>
+<br>
 
-<h3><p><strong>Demo: rigid-body transformations can align hidden representational spaces across neural networks</strong></p></h3>
+</p>
+
+
+
 
 When many instantiations of the same neural network architecture are trained on the same dataset, these networks tend to approximate the same mathematical mapping with very different weight configurations. What's the connection across these learned neural network solutions? In our recent work, we found the learned hidden representations across neural networks can be related by orthogonal transformations, which can be viewed as some rigid-body transformations.
 
@@ -167,9 +179,11 @@ Lu, Q., Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U.
 <br>
 Workshop on Integration of Deep Learning Theories, NeurIPS 2018.
 <br>
+<a href="https://qihongl.github.io/docs/NIPS18_poster_NNSRM.pdf">poster</a>,
 <a href="https://arxiv.org/abs/1811.11684">paper</a>,
 <a href="https://github.com/qihongl/nnsrm-neurips18">code</a>,
-<a href="https://qihongl.github.io/nnsrm-NeurIPS18.html">demo</a>
+<a href="https://colab.research.google.com/github/qihongl/demo-nnalign/blob/master/demo-nnalign.ipynb">tutorial on google colab</a>, 
+<a href="https://qihongl.github.io/nnsrm-NeurIPS18.html">some animations</a>
 
 <br>
 <br>
