--- a/teaching.html
+++ b/teaching.html
@@ -81,17 +81,28 @@ My demos:
 <a href="https://github.com/qihongl/demo-td">repo</a>,
 <a href="https://docs.google.com/presentation/d/1FZzoebdkT6g103CbYOA87Hz_CUIdjs37wVu7TB2E4RA/edit?usp=sharing">some slides</a>
 <br>
-- a qualitative replication of Elman (1990) with a fully recurrent network
+- a qualitative replication of 
+<a href="https://www.sciencedirect.com/science/article/pii/036402139090002E">
+Elman (1990) 
+</a>
+with a fully recurrent network
 <br>
 &emsp;
 <a href="https://github.com/qihongl/demo-elman-1990">repo</a>
 <br>
-- leaky competing accumulator, a toy example
+- the leaky competing accumulator, a toy example
 <br>
 &emsp;
 <a href="https://github.com/qihongl/demo-lca">repo</a>
 <br>
-
+- the stroop model, 
+<a href="https://www.ncbi.nlm.nih.gov/pubmed/2200075">
+Cohen et al (1990)
+</a>
+<br>
+&emsp;
+<a href="https://github.com/qihongl/stroop-cohen-etal-1990">repo</a>
+<br>
 
 
 
