--- a/teaching.html
+++ b/teaching.html
@@ -105,18 +105,16 @@ Cohen et al (1990)
 <br>
 
 
-
-
 <br>
-Other demos:
+Some online interactive demos:
 <br>
-- <a href="https://playground.tensorflow.org/">Neural network playground</a>
+- <a href="https://playground.tensorflow.org/">Neural network play ground</a>
 <br>
-- <a href="https://github.com/iRath96/som-demo">a demo of the self-organizing map</a>
+- <a href="https://github.com/iRath96/som-demo">Self-organizing map</a>
 <br>
-- <a href="https://neuronaldynamics-exercises.readthedocs.io/en/latest/exercises/hopfield-network.html">a demo of the hopfield network</a>
+- <a href="https://neuronaldynamics-exercises.readthedocs.io/en/latest/exercises/hopfield-network.html">The hopfield network</a> (need to install a python library)
 <br>
-- <a href="https://github.com/qihongl/keras-nets-demo">some Keras demos</a>
+- <a href="https://www.med.upenn.edu/longding1/javascript/DDM_LongDing.html">The drift diffusion model</a>
 
 </p>
 
