--- a/teaching.html
+++ b/teaching.html
@@ -67,18 +67,20 @@
 <br>
 &emsp;
 <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=005628&term=1194">offcial course description</a>
+| 
+<a href="https://github.com/PrincetonUniversity/PsyNeuLink">psyneulink</a>
 <br>
 <br>
 My demos:
 <br>
 - the "necker cube network", a model of bistable perception
 <br>
-&emsp; <a href="https://github.com/qihongl/demo-necker-cube">repo</a>
+&emsp; <a href="https://github.com/qihongl/demo-necker-cube">code in psyneulink</a>
 <br>
 - n-th order conditioning with temporal difference learning
 <br>
 &emsp;
-<a href="https://github.com/qihongl/demo-td">repo</a>,
+<a href="https://github.com/qihongl/demo-td">code in numpy</a>,
 <a href="https://docs.google.com/presentation/d/1FZzoebdkT6g103CbYOA87Hz_CUIdjs37wVu7TB2E4RA/edit?usp=sharing">some slides</a>
 <br>
 - a qualitative replication of 
@@ -88,12 +90,13 @@ Elman (1990)
 with a fully recurrent network
 <br>
 &emsp;
-<a href="https://github.com/qihongl/demo-elman-1990">repo</a>
+<a href="https://github.com/qihongl/demo-elman-1990">code in pytorch / psyneulink</a>
 <br>
-- the leaky competing accumulator, a toy example
+- the leaky competing accumulator 
 <br>
 &emsp;
-<a href="https://github.com/qihongl/demo-lca">repo</a>
+<a href="https://github.com/qihongl/pylca">code in numpy</a>, 
+<a href="https://github.com/qihongl/demo-lca">code in psyneulink</a>
 <br>
 - the stroop model, 
 <a href="https://www.ncbi.nlm.nih.gov/pubmed/2200075">
@@ -101,7 +104,7 @@ Cohen et al (1990)
 </a>
 <br>
 &emsp;
-<a href="https://github.com/qihongl/stroop-cohen-etal-1990">repo</a>
+<a href="https://github.com/qihongl/stroop-cohen-etal-1990">code in psyneulink</a>
 <br>
 
 
