--- a/teaching.html
+++ b/teaching.html
@@ -93,6 +93,7 @@ with a fully recurrent network
 <a href="https://github.com/qihongl/demo-elman-1990">code in pytorch / psyneulink</a>
 <br>
 - the leaky competing accumulator 
+<a href="https://www.ncbi.nlm.nih.gov/pubmed/11488378">Usher & McClelland (2001)</a>
 <br>
 &emsp;
 <a href="https://github.com/qihongl/pylca">code in numpy</a>, 
