--- a/teaching.html
+++ b/teaching.html
@@ -81,7 +81,8 @@ My demos:
 <br>
 &emsp;
 <a href="https://github.com/qihongl/demo-td">code in numpy</a>,
-<a href="https://docs.google.com/presentation/d/1FZzoebdkT6g103CbYOA87Hz_CUIdjs37wVu7TB2E4RA/edit?usp=sharing">some slides</a>
+<a href="https://docs.google.com/presentation/d/1FZzoebdkT6g103CbYOA87Hz_CUIdjs37wVu7TB2E4RA/edit?usp=sharing">
+slides on reinforcement learning</a>
 <br>
 - a qualitative replication of 
 <a href="https://www.sciencedirect.com/science/article/pii/036402139090002E">
@@ -92,12 +93,12 @@ with a fully recurrent network
 &emsp;
 <a href="https://github.com/qihongl/demo-elman-1990">code in pytorch / psyneulink</a>
 <br>
-- the leaky competing accumulator 
+- the leaky competing accumulator, by 
 <a href="https://www.ncbi.nlm.nih.gov/pubmed/11488378">Usher & McClelland (2001)</a>
 <br>
 &emsp;
-<a href="https://github.com/qihongl/pylca">code in numpy</a>, 
-<a href="https://github.com/qihongl/demo-lca">code in psyneulink</a>
+code: <a href="https://github.com/qihongl/pylca">numpy</a> | 
+<a href="https://github.com/qihongl/demo-lca">psyneulink</a>
 <br>
 - the stroop model, 
 <a href="https://www.ncbi.nlm.nih.gov/pubmed/2200075">
@@ -105,7 +106,9 @@ Cohen et al (1990)
 </a>
 <br>
 &emsp;
-<a href="https://github.com/qihongl/stroop-cohen-etal-1990">code in psyneulink</a>
+<a href="https://github.com/qihongl/stroop-cohen-etal-1990">code in psyneulink</a>, 
+<a href="https://docs.google.com/presentation/d/1uG9LVT5susIOUvRCeg8qzzZNwNnwRbGPTiRGcjAyqGU/edit?usp=sharing">
+slides on cognitive control</a>
 <br>
 
 
