--- a/teaching.html
+++ b/teaching.html
@@ -71,12 +71,14 @@
 <a href="https://github.com/PrincetonUniversity/PsyNeuLink">psyneulink</a>
 <br>
 <br>
+
 My demos:
 <br>
 - the "necker cube network", a model of bistable perception
 <br>
 &emsp; <a href="https://github.com/qihongl/demo-necker-cube">code in psyneulink</a>
 <br>
+
 - n-th order conditioning with temporal difference learning
 <br>
 &emsp;
@@ -84,6 +86,13 @@ My demos:
 <a href="https://docs.google.com/presentation/d/1FZzoebdkT6g103CbYOA87Hz_CUIdjs37wVu7TB2E4RA/edit?usp=sharing">
 slides on reinforcement learning</a>
 <br>
+
+- a grid world Q-learning example
+<br>
+&emsp;
+<a href="https://github.com/qihongl/demo-q-learning">code in numpy / pytorch</a>
+<br>
+
 - a qualitative replication of 
 <a href="https://www.sciencedirect.com/science/article/pii/036402139090002E">
 Elman (1990) 
@@ -93,6 +102,7 @@ with a fully recurrent network
 &emsp;
 <a href="https://github.com/qihongl/demo-elman-1990">code in pytorch / psyneulink</a>
 <br>
+
 - the leaky competing accumulator, by 
 <a href="https://www.ncbi.nlm.nih.gov/pubmed/11488378">Usher & McClelland (2001)</a>
 <br>
@@ -100,6 +110,7 @@ with a fully recurrent network
 code: <a href="https://github.com/qihongl/pylca">numpy</a> | 
 <a href="https://github.com/qihongl/demo-lca">psyneulink</a>
 <br>
+
 - the stroop model, 
 <a href="https://www.ncbi.nlm.nih.gov/pubmed/2200075">
 Cohen et al (1990)
