--- a/teaching.html
+++ b/teaching.html
@@ -67,19 +67,20 @@
 <br>
 &emsp;
 <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=005628&term=1194">offcial course description</a>
-| 
+|
 <a href="https://github.com/PrincetonUniversity/PsyNeuLink">psyneulink</a>
 <br>
 <br>
 
 My demos:
 <br>
-- the "necker cube network", a model of bistable perception
+- attractor-network, <a href="https://en.wikipedia.org/wiki/Necker_cube">necker cube illusion</a>  
 <br>
 &emsp; <a href="https://github.com/qihongl/demo-necker-cube">code in psyneulink</a>
 <br>
 
-- n-th order conditioning with temporal difference learning
+- temporal difference learning, 
+<a href="https://en.wikipedia.org/wiki/Second-order_conditioning">higher order conditioning</a>
 <br>
 &emsp;
 <a href="https://github.com/qihongl/demo-td">code in numpy</a>,
@@ -87,37 +88,36 @@ My demos:
 slides on reinforcement learning</a>
 <br>
 
-- a grid world Q-learning example
+- q-learning, grid world navigation
 <br>
 &emsp;
 <a href="https://github.com/qihongl/demo-q-learning">code in numpy / pytorch</a>
 <br>
 
-- a qualitative replication of 
+- fully recurrent network, qualitative replicate
 <a href="https://www.sciencedirect.com/science/article/pii/036402139090002E">
-Elman (1990) 
+Elman (1990)
 </a>
-with a fully recurrent network
 <br>
 &emsp;
 <a href="https://github.com/qihongl/demo-elman-1990">code in pytorch / psyneulink</a>
 <br>
 
-- the leaky competing accumulator, by 
+- the leaky competing accumulator, by
 <a href="https://www.ncbi.nlm.nih.gov/pubmed/11488378">Usher & McClelland (2001)</a>
 <br>
 &emsp;
-code: <a href="https://github.com/qihongl/pylca">numpy</a> | 
+code: <a href="https://github.com/qihongl/pylca">numpy</a>,
 <a href="https://github.com/qihongl/demo-lca">psyneulink</a>
 <br>
 
-- the stroop model, 
+- the stroop model, qualitative replicate
 <a href="https://www.ncbi.nlm.nih.gov/pubmed/2200075">
 Cohen et al (1990)
 </a>
 <br>
 &emsp;
-<a href="https://github.com/qihongl/stroop-cohen-etal-1990">code in psyneulink</a>, 
+<a href="https://github.com/qihongl/stroop-cohen-etal-1990">code in psyneulink</a>,
 <a href="https://docs.google.com/presentation/d/1uG9LVT5susIOUvRCeg8qzzZNwNnwRbGPTiRGcjAyqGU/edit?usp=sharing">
 slides on cognitive control</a>
 <br>
