--- a/teaching.html
+++ b/teaching.html
@@ -74,7 +74,7 @@
 
 My demos:
 <br>
-- attractor-network, <a href="https://en.wikipedia.org/wiki/Necker_cube">necker cube illusion</a>  
+- attractor network, <a href="https://en.wikipedia.org/wiki/Necker_cube">necker cube illusion</a>  
 <br>
 &emsp; <a href="https://github.com/qihongl/demo-necker-cube">code in psyneulink</a>
 <br>
