--- a/teaching.html
+++ b/teaching.html
@@ -74,12 +74,12 @@
 
 My demos:
 <br>
-- attractor network, <a href="https://en.wikipedia.org/wiki/Necker_cube">necker cube illusion</a>  
+- constraint satisfaction, a model of the <a href="https://en.wikipedia.org/wiki/Necker_cube">necker cube illusion</a>  
 <br>
 &emsp; <a href="https://github.com/qihongl/demo-necker-cube">code in psyneulink</a>
 <br>
 
-- temporal difference learning, 
+- temporal difference learning, a model of  
 <a href="https://en.wikipedia.org/wiki/Second-order_conditioning">higher order conditioning</a>
 <br>
 &emsp;
@@ -88,22 +88,20 @@ My demos:
 slides on reinforcement learning</a>
 <br>
 
-- q-learning, grid world navigation
+- q-learning with neural network function approximator, grid world navigation 
 <br>
 &emsp;
 <a href="https://github.com/qihongl/demo-q-learning">code in numpy / pytorch</a>
 <br>
 
-- fully recurrent network, qualitative replicate
-<a href="https://www.sciencedirect.com/science/article/pii/036402139090002E">
-Elman (1990)
-</a>
+- statistical learning with a recurrent network 
+(<a href="https://www.sciencedirect.com/science/article/pii/036402139090002E">Elman, 1990</a>)
 <br>
 &emsp;
 <a href="https://github.com/qihongl/demo-elman-1990">code in pytorch / psyneulink</a>
 <br>
 
-- the leaky competing accumulator, by
+- the leaky competing accumulator by
 <a href="https://www.ncbi.nlm.nih.gov/pubmed/11488378">Usher & McClelland (2001)</a>
 <br>
 &emsp;
@@ -111,7 +109,7 @@ code: <a href="https://github.com/qihongl/pylca">numpy</a>,
 <a href="https://github.com/qihongl/demo-lca">psyneulink</a>
 <br>
 
-- the stroop model, qualitative replicate
+- a neural network model of the stroop effect, qualitative replicate
 <a href="https://www.ncbi.nlm.nih.gov/pubmed/2200075">
 Cohen et al (1990)
 </a>
