add a dnd example

--- a/teaching.html
+++ b/teaching.html
@@ -120,6 +120,13 @@ Cohen et al (1990)
 slides on cognitive control</a>
 <br>
 
+- a LSTM with episodic memory, see  
+<a href="https://arxiv.org/abs/1805.09692">Ritter et al. (2018)</a>
+<br>
+&emsp;
+<a href="https://github.com/qihongl/dnd-lstm">code in pytorch</a>
+<br>
+
 
 <br>
 Some online interactive demos:
