--- a/teaching.html
+++ b/teaching.html
@@ -72,7 +72,7 @@
 <br>
 <br>
 
-My demos:
+Here're some demos I made... 
 <br>
 - constraint satisfaction, a model of the <a href="https://en.wikipedia.org/wiki/Necker_cube">necker cube illusion</a>  
 <br>
@@ -129,13 +129,15 @@ slides on cognitive control</a>
 
 
 <br>
-Some online interactive demos:
+Here're some awesome interactive demos I found online... 
+<br>
+- <a href="https://lecture-demo.ira.uka.de/neural-network-demo/?preset=Rosenblatt%20Perceptron">Perceptron</a>
+<br>
+- <a href="https://github.com/TarinZ/hopfield-nets">The hopfield network</a> 
 <br>
 - <a href="https://playground.tensorflow.org/">Neural network play ground</a>
 <br>
 - <a href="https://github.com/iRath96/som-demo">Self-organizing map</a>
-<br>
-- <a href="https://neuronaldynamics-exercises.readthedocs.io/en/latest/exercises/hopfield-network.html">The hopfield network</a> (need to install a python library)
 <br>
 - <a href="https://www.med.upenn.edu/longding1/javascript/DDM_LongDing.html">The drift diffusion model</a>
 
