--- a/teaching.html
+++ b/teaching.html
@@ -140,9 +140,9 @@ Here're some awesome interactive demos I found online...
 - <a href="https://github.com/iRath96/som-demo">Self-organizing map</a>
 <br>
 - <a href="https://www.med.upenn.edu/longding1/javascript/DDM_LongDing.html">The drift diffusion model</a>
-
+<br>
+- <a href="https://cs.stanford.edu/people/karpathy/reinforcejs/index.html">REINFORCEjs</a>
 </p>
-
 
 
 
