--- a/teaching.html
+++ b/teaching.html
@@ -144,9 +144,9 @@ Here're some awesome interactive demos I found online...
 - <a href="https://cs.stanford.edu/people/karpathy/reinforcejs/index.html">REINFORCEjs</a>
 </p>
 
+<hr>
 
 
-<br>
 <p>
 <strong>Fall 2018, ELE | NEU | PSY 480: fMRI Decoding: Reading Minds Using Brain Scans</strong>
 <br>
@@ -154,15 +154,20 @@ Here're some awesome interactive demos I found online...
 <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=011565&term=1192">offcial course description</a>
 |
 <a href="https://github.com/NEU480/organization/wiki">class wiki</a>
-
 </p>
 
+Resources: 
+<br>
+- <a href="https://dartbrains.org/intro">Introduction to fMRI data analysis</a>, Luke Chang, Dartmouth
+<br>
+- <a href="https://www.youtube.com/watch?v=yA65FuSpOMs&list=PLyGKBDfnk-iDVpUGSR_GlDmQrZOS0Lk6k">fMRI Bootcamp</a>, Rebecca Saxe, MIT
+<br>
+- <a href="http://nancysbraintalks.mit.edu/">nancys braintalks</a>, Nancy Kanwisher, MIT
 
+<br>
 <br>
 <br>
 <img src="imgs/misc/git_in_case_of_fire.png" alt="git" class="center" width="200">
-
-
 
 
 </section>
