--- a/teaching.html
+++ b/teaching.html
@@ -154,9 +154,14 @@ Here're some awesome interactive demos I found online...
 <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=011565&term=1192">offcial course description</a>
 |
 <a href="https://github.com/NEU480/organization/wiki">class wiki</a>
+<br>
+<b>
+&emsp; The lab Jupyter notebooks are publicly available 
+<a href="https://brainiak.org/tutorials/">here</a>!
+</b>
 </p>
 
-Resources: 
+Other resources: 
 <br>
 - <a href="https://dartbrains.org/intro">Introduction to fMRI data analysis</a>, Luke Chang, Dartmouth
 <br>
